fix: remove margin left from logo to remove gap between logo and logo image on small screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,6 @@ footer i {
         margin-bottom: 15px;
     }
 
-    #logo,
     #logo-image {
         float: left;
         margin-left: 30px;
@@ -490,7 +489,6 @@ footer i {
         width: 100%;
         height: 400px;
         padding: 20px;
-        margin-left: 25px;
         display: inline-block;
     }
 
